--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
+    "dev": "node index.js",
     "build": "npm i",
     "test": "echo \"Error: no test specified\" && exit 1",
     "client-install": "cd client && npm install",
